--- a/src/components/ur-menu/ur-menu.css
+++ b/src/components/ur-menu/ur-menu.css
@@ -216,8 +216,8 @@
     margin-top: 8px;
     align-items: center;
     justify-content: flex-start;
-    border-top: 1px solid rgba(var(--ur-color-outline-variant));
-    border-bottom: 1px solid rgba(var(--ur-color-outline-variant));
+    border-top: 1px solid rgb(var(--ur-color-outline-variant));
+    border-bottom: 1px solid rgb(var(--ur-color-outline-variant));
 }
 
 :host .custom-content {
