--- a/src/components/ur-top-app-bar/ur-top-app-bar.css
+++ b/src/components/ur-top-app-bar/ur-top-app-bar.css
@@ -24,7 +24,7 @@
     padding: 0 16px;
 }
 
-:host mdui-top-app-bar[variant="small"] {
+:host mdui-top-app-bar[variant='small'] {
     height: 48px;
 }
 
@@ -32,7 +32,7 @@
     flex: 1;
     font-size: 14px;
     line-height: 16px;
-    letter-spacing: -.26px;
+    letter-spacing: -0.26px;
     color: var(--ur-color-on-background, #000);
 
     /* Truncation styles */
@@ -45,4 +45,13 @@
 
 :host ur-button-icon {
     margin-right: initial;
+}
+
+:host .read-progress {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    width: 100%;
+    height: 4px;
+    background: red;
 }
