one united rail

--- a/src/components/ur-button-icon/ur-button-icon.css
+++ b/src/components/ur-button-icon/ur-button-icon.css
@@ -14,3 +14,9 @@
     height: 40px;
     border-radius: var(--ur-shape-corner-small);
 }
+
+:host ::slotted(svg) {
+    width: 18px;
+    height: 18px;
+    fill: currentColor;
+}
