--- a/src/components/ur-reader/ur-reader.css
+++ b/src/components/ur-reader/ur-reader.css
@@ -151,11 +151,11 @@
     z-index: 10;
     padding: 0 4px;
     position: fixed;
-    transform: translate(-50%, 0);
+    transform: translate(calc(-50% + 35px), 0);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: calc(100% - 8px);
+    width: calc(100% - 78px);
     max-width: 1100px;
 }
 
@@ -174,7 +174,8 @@
     bottom: 0;
     top: initial;
     max-width: 740px;
-    padding-bottom: 4px;
+    padding: 4px;
+    width: calc(100% - 8px);
     transition: transform 0.3s ease;
     transform: translate(-50%, 0);
 }
