--- a/src/components/ur-navigation-drawer/ur-navigation-drawer.css
+++ b/src/components/ur-navigation-drawer/ur-navigation-drawer.css
@@ -2,3 +2,21 @@
     display: block;
     position: relative;
 }
+
+:host .drawer-header {
+    padding: 12px 24px;
+    border-bottom: 1px solid rgb(var(--ur-color-outline));
+    user-select: none;
+}
+
+:host .drawer-content {
+    flex: 1;
+    overflow-y: auto;
+    padding: 16px;
+    min-height: 0;
+}
+
+:host .drawer-footer {
+    padding: 16px;
+    border-top: 1px solid rgb(var(--ur-color-outline));
+}
