--- a/src/components/ur-main-desktop-top-app-bar/ur-main-desktop-top-app-bar.css
+++ b/src/components/ur-main-desktop-top-app-bar/ur-main-desktop-top-app-bar.css
@@ -36,7 +36,17 @@
     align-items: center;
     justify-content: left;
     width: 100%;
-    padding: 0 16px;
+}
+
+:host .main-actions-holder {
+    flex: 1 1 auto;  /* don't grow, can shrink, auto basis */
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+:host .flex-space {
+    flex: 1 1 auto;  /* don't grow, don't shrink, auto basis */
 }
 
 :host mdui-top-app-bar[variant="small"] {
@@ -56,7 +66,7 @@
     padding: 0 24px 0 8px;
     background: #EFEEF0;
     cursor: text;
-    flex: 1;
+    flex: 1 1 auto;
     /* Only grow as much as needed for content */
     max-width: max-content;
     overflow: hidden;
