--- a/src/components/ur-navigation-drawer-global/ur-navigation-drawer-global.css
+++ b/src/components/ur-navigation-drawer-global/ur-navigation-drawer-global.css
@@ -2,6 +2,10 @@
 :host {
     display: block;
     position: relative;
+    --ur-color-on-surface: var(--mdui-color-on-surface);
+    --ur-color-surface: var(--mdui-color-surface);
+
+    color: rgb(var(--ur-color-on-surface));
 }
 
 :host ::slotted([slot='header']) {
@@ -14,24 +18,26 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    color: rgb(var(--ur-color-on-surface));
     background: rgb(var(--ur-color-surface));
-    border-bottom: 1px solid rgb(var(--ur-color-outline));
     z-index: 1;
 }
 
 :host .drawer-content {
     overflow-y: auto;
-    padding: 0 24px;
+    padding: 8px 24px;
     min-height: 0;
     position: relative;
+    color: rgb(var(--ur-color-on-surface));
+    background: rgb(var(--ur-color-surface));
 }
 
 :host ::slotted([slot='footer']) {
     bottom: 0;
     position: sticky;
     padding: 8px 12px;
+    color: rgb(var(--ur-color-on-surface));
     background: rgb(var(--ur-color-surface));
-    border-top: 1px solid rgb(var(--ur-color-outline));
     display: flex;
     gap: 8px;
     z-index: 1;
