--- a/src/components/ur-main-menu/ur-main-menu.css
+++ b/src/components/ur-main-menu/ur-main-menu.css
@@ -1,7 +1,10 @@
 :host {
-    top: 0;
-    left: 0;
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    width: var(--collapsed-width, 56px);
+    border-right: 1px solid rgb(var(--ur-color-outline-variant));
+
     --ur-color-background: var(--mdui-color-background);
     --ur-color-primary: var(--mdui-color-primary);
     --ur-color-on-primary: var(--mdui-color-on-primary);
@@ -13,42 +16,65 @@
     --ur-color-on-surface-variant: var(--mdui-color-on-surface-variant);
     --ur-state-layers-outline-variant-opacity-16: var(--mdui-state-layers-outline-variant-opacity-16);
 
+    --ur-color-error: var(--mdui-color-error);
+
     --collapsed-width: 56px;
     --expanded-width: 220px;
+
+    scrollbar-width: thin;
+    &::-webkit-scrollbar {
+        width: 6px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: rgb(var(--ur-color-outline-variant));
+        border-radius: 3px;
+    }
 }
 
-:host .left-menu .toggle-button {
+:host .left-menu {
+    height: auto; /* Allow height to expand with content */
+    display: flex;
+    flex-direction: column;
+
+    &::-webkit-scrollbar {
+        width: 6px; /* For Chrome, Safari, and Opera */
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: rgb(var(--ur-color-outline-variant));
+        border-radius: 3px;
+    }
+}
+
+:host .flex {
+    flex: 1 1 auto;
+}
+
+:host .welcome {
+    padding: 0 8px;
+}
+
+:host .toggle-button {
     border-radius: 0;
 }
 
-:host .left-menu .toggle-button .icon {
+:host .toggle-button .icon {
     font-size: 22px;
     color: rgb(var(--ur-color-on-background));
 }
 
-:host .left-menu {
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    width: var(--collapsed-width, 56px);
-    height: inherit;
-    position: fixed;
-    border-right: 1px solid rgb(var(--ur-color-outline-variant));
-}
-
-:host .left-menu.expanded {
+:host(.expanded) {
     width: var(--expanded-width, 220px);
 }
 
 :host .premium {
     display: flex;
     padding: 8px;
+    justify-content: center;
+    align-items: center;
 }
 
 :host .toggle-button {
-    background-color: rgb(var(--ur-color-background));
     color: rgb(var(--ur-color-on-background));
     border: none;
     width: 56px;
@@ -62,13 +88,20 @@
     flex-direction: column;
 }
 
-:host .menu.loggedout {
-    padding: 16px 8px;
+:host .menu.logged-out {
+    padding: 16px 0;
     height: 40px;
 }
 
 :host .menu-button {
     width: 100%;
+}
+
+:host .menu-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 :host .menu.loggedin {
@@ -97,6 +130,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+:host .navigation-button-icon {
+    height: 40px;
+    width: 40px;
 }
 
 :host .nav-item {
@@ -133,6 +171,7 @@
     font-size: 10px;
     margin-right: 8px;
     font-weight: 600;
+    cursor: pointer;
     color: rgb(var(--ur-color-outline));
 }
 
@@ -158,7 +197,7 @@
     padding: 12px 0 4px 0;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
+    row-gap: 8px;
     align-items: center;
 }
 
@@ -166,11 +205,16 @@
     width: 20px;
     height: 20px;
     opacity: 0.5;
+    transform: scale(0.8);
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
     color: rgb(var(--ur-color-on-background));
+}
+
+:host .social.x {
+    color: rgb(var(--ur-color-background));
 }
 
 :host .vertical-logo a {
@@ -226,6 +270,10 @@
     gap: 10px;
 }
 
+:host .notifications-holder {
+    border-top: 1px solid rgb(var(--ur-color-outline-variant));
+}
+
 :host .toggle-button {
     width: 56px;
     height: 40px;
@@ -245,4 +293,64 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+:host .notification-badge {
+    background-color: rgb(var(--ur-color-error));
+    color: rgb(var(--ur-color-background));
+    border-radius: 12px;
+    padding: 2px;
+    font-size: 12px;
+    min-width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 8px; /* Adjust based on your layout needs */
+}
+
+:host .notification-button-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+:host .notifications-holder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+:host .notification-badge-collapsed {
+    background-color: rgb(var(--ur-color-error));
+    color: white;
+    border-radius: 12px;
+    padding: 2px;
+    font-size: 11px;
+    min-width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: -4px;
+}
+
+:host .notification-badge {
+    pointer-events: none;
+}
+
+:host .notification-badge-collapsed {
+    pointer-events: none;
+}
+
+:host .notification-badge:empty {
+    display: none;
 }
