--- a/src/components/ur-button-icon/ur-button-icon.css
+++ b/src/components/ur-button-icon/ur-button-icon.css
@@ -1,4 +1,6 @@
 :host {
+    --ur-color-on-surface: var(--mdui-color-on-surface);
+    --ur-color-primary: var(--mdui-color-primary);
     display: block;
     width: 40px;
     height: 40px;
@@ -16,4 +18,13 @@
     width: 18px;
     height: 18px;
     fill: currentColor;
+}
+
+:host mdui-button-icon.ur-button-icon--active {
+    background-color: rgba(var(--ur-color-on-surface), .07);
+    box-shadow: inset 4px 0 0 rgb(var(--ur-color-primary));
+}
+
+:host mdui-button-icon.ur-button-icon--disabled {
+    pointer-events: none;
 }
